--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^7.2.0",
     "@mui/styled-engine-sc": "^7.2.0",
     "@mui/x-date-pickers": "^8.9.0",
+    "axios": "^1.13.2",
     "dayjs": "^1.11.13",
     "install": "^0.13.0",
     "npm": "^11.4.2",
