--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm": "^11.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.10.1",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.19"
   },
